--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
 #root {
     background-color: white;
+    /* font-family: 'Amaranth', sans-serif; */
+/* font-family: 'Arsenal', sans-serif; */
+font-family: 'Karma', serif;
+/* font-family: 'PT Serif', serif;
+font-family: 'Shadows Into Light Two' */
 }
 
 #rest-stack {
