--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -15,7 +15,7 @@
   padding: 10px 0;
   margin: 0 20px;
   width: 100%;
-  color: hwb(34 11% 0%);
+  color: hsl(0, 0%, 46%);
 }
 
 /* Hide the scrollbar */
