--- a/src/components/Filter/filter.css
+++ b/src/components/Filter/filter.css
@@ -31,8 +31,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-right: 20px;
+  /* margin-right: 30px; */
   cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  font-size: 10px;
 }
 
 .cuisine-icon.selected {
@@ -61,12 +67,50 @@
 
 @media screen and (min-width: 800px) {
   .filter-container {
-    margin: 0 30px;
+    margin: 0 80px;
   }
 }
 
 @media screen and (min-width: 700px) {
   .arrow {
     display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .cuisine-icon {
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+  }
+
+  .filter-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .filter-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    padding: 8px 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .scroll-arrows {
+    display: none;
+  }
+
+  .cuisine-icon:first-child {
+    margin-left: 20;
   }
 }
